Prevent pre text from wrapping

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -53,7 +53,7 @@ hr {
 mark { background: #FF0; color: #000; }
 code, kbd, pre,
 samp { font-family: monospace, serif; font-size: 1em; }
-pre { white-space: pre-wrap; }
+pre { white-space: pre; overflow: auto; }
 q { quotes: "\201C" "\201D" "\2018" "\2019"; }
 small { font-size: 80%; }
 sub, sup {
@@ -328,10 +328,10 @@ code, tt {
     padding: 1px 3px;
     font-family: Inconsolata, monospace, sans-serif;
     font-size: 0.85em;
-    white-space: pre-wrap;
     border: #E3EDF3 1px solid;
     background: #F7FAFB;
     border-radius: 2px;
+    overflow: auto;
 }
 
 pre {
@@ -351,8 +351,6 @@ pre {
 
 pre code, tt {
     font-size: inherit;
-    white-space: -moz-pre-wrap;
-    white-space: pre-wrap;
     background: transparent;
     border: none;
     padding: 0;
